force-app/main/default/objects/Contract__c/fields/Client_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Implementation_Status__c</fullName>
    <label>Client Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Launched +90</fullName>
            </value>
            <value>
                <fullName>Ongoing Delivery</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>