force-app/main/default/objects/Contract__c/fields/Client_Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Incentive_Type__c</fullName>
    <label>Client Incentive Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HSA Contribution</fullName>
            </value>
            <value>
                <fullName>Payroll Inclusion</fullName>
            </value>
            <value>
                <fullName>No Copay for all Diabetes Meds</fullName>
            </value>
            <value>
                <fullName>No Copay for all Generic Meds</fullName>
            </value>
            <value>
                <fullName>Reduced Copay for Diabetes Meds</fullName>
            </value>
            <value>
                <fullName>Required Participation for Premium Health Plan</fullName>
            </value>
            <value>
                <fullName>Wellness points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>