force-app/main/default/objects/Contract__c/fields/Client_Logo_Link__c.field-meta.xml
<CustomField>
    <fullName>Client_Logo_Link__c</fullName>
    <description>Link to the client-approved logo for Marketing purposes</description>
    <inlineHelpText>Link to the client-approved logo for Marketing purposes</inlineHelpText>
    <label>Client Logo Link</label>
    <type>Url</type>
</CustomField>