force-app/main/default/objects/Contract__c/fields/Client_Must_Approve_Assets__c.field-meta.xml
<CustomField>
    <fullName>Client_Must_Approve_Assets__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Must Approve Assets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>