force-app/main/default/objects/Contract__c/fields/Client_Overview__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Client Overview record to which an individual, program-specific Program Overview relates.</description>
    <inlineHelpText>The parent Client Overview contract record to which an individual, program-specific Program Overview relates. Integrated with Redshift.</inlineHelpText>
    <label>Client Overview</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>You must select a &quot;Client Overview&quot;</errorMessage>
        <filterItems>
            <field>Contract__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Client Overview</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Program Overviews</relationshipLabel>
    <relationshipName>ProgramOverviews</relationshipName>
    <type>Lookup</type>
</CustomField>