force-app/main/default/objects/Contract__c/fields/Client_Overview_CSM__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copies the Client Overview&apos;s Client Success Manager. Only used on Program Overview.</description>
    <label>Client Overview CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGO_Contracts_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>