force-app/main/default/objects/Contract__c/fields/Client_Overview_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview_Id__c</fullName>
    <formula>Client_Overview__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Overview Id</label>
    <type>Text</type>
</CustomField>