force-app/main/default/objects/Contract__c/fields/Client_Overview_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Overview_Status__c</fullName>
    <description>Copy for Client Overview&apos;s Status on Program Overview. Populated by workflow rule.</description>
    <inlineHelpText>Copy for Client Overview&apos;s Status on Program Overview. Populated by workflow rule.</inlineHelpText>
    <label>Client Overview Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>