force-app/main/default/objects/Contract__c/fields/Client_Partner_Required_Tags__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Required_Tags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the client or partner has tags in down stream database.</description>
    <label>Client/Partner Required Tags</label>
    <type>Checkbox</type>
</CustomField>