force-app/main/default/objects/Contract__c/fields/Client_Plan_Design_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Client_Plan_Design_Inclusions__c</fullName>
    <label>Client Plan Design Inclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Diabetes Supplies – Basic (meter, test strips, etc.)</fullName>
            </value>
            <value>
                <fullName>Diabetes supplies – Additional (insulin, etc.)</fullName>
            </value>
            <value>
                <fullName>Preventative Visits covered in full</fullName>
            </value>
            <value>
                <fullName>Discounted premium health plan with participation requirements</fullName>
            </value>
            <value>
                <fullName>Points for Health Engagement Platform</fullName>
            </value>
            <value>
                <fullName>VBID Program (Medication Copay) with PBM</fullName>
            </value>
            <value>
                <fullName>Livongo enrollment required to remain on top-tier health plans</fullName>
            </value>
            <value>
                <fullName>Co-insurance/Copay to join Livongo</fullName>
            </value>
            <value>
                <fullName>Other Incentive(s)</fullName>
            </value>
            <value>
                <fullName>High Deductible Health Plan</fullName>
            </value>
            <value>
                <fullName>Health and Wellness Engagement Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>