force-app/main/default/objects/Contract__c/fields/Client_Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Client_Renewal_Terms__c</fullName>
    <description>Indicates the client renewal terms per the Partner Agreement</description>
    <label>Client Renewal Terms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>