force-app/main/default/objects/Contract__c/fields/Client_Termination_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Client_Termination_Notice_Period__c</fullName>
    <description>Indicates the time frame that the CS team needs to notify clients of renewal, per the Partner Agreement</description>
    <label>Client Termination Notice Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>