force-app/main/default/objects/Contract__c/fields/Clients_Can_Contract_Through_Partner__c.field-meta.xml
<CustomField>
    <fullName>Clients_Can_Contract_Through_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if Partner Account can be a &quot;Contract Path&quot; for clients</description>
    <inlineHelpText>Indicate if Partner Account can be a &quot;Contract Path&quot; for clients</inlineHelpText>
    <label>Clients Can Contract Through Partner?</label>
    <type>Checkbox</type>
</CustomField>