force-app/main/default/objects/Contract__c/fields/Clinical_Data_Sharing_and_Access__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Data_Sharing_and_Access__c</fullName>
    <label>Clinical Data Sharing and Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Clinical Portal - Care Coordination</fullName>
            </value>
            <value>
                <fullName>Clinical Portal - Shared Coaching</fullName>
            </value>
            <value>
                <fullName>Reporting/File Share</fullName>
            </value>
            <value>
                <fullName>API Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>