force-app/main/default/objects/Contract__c/fields/Clinical_Model__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Model__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Clinical Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>Shared Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>