force-app/main/default/objects/Contract__c/fields/Clinical_Model_Details__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Model_Details__c</fullName>
    <label>Clinical Model Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>