force-app/main/default/objects/Contract__c/fields/Clinical_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Referrals__c</fullName>
    <label>Clinical Referrals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One directional (inbound to Livongo)</fullName>
            </value>
            <value>
                <fullName>Bi-Directional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>