force-app/main/default/objects/Contract__c/fields/Co_branding_Channels__c.field-meta.xml
<CustomField>
    <fullName>Co_branding_Channels__c</fullName>
    <description>Client preferences on channels for logo inclusion</description>
    <inlineHelpText>Client preferences on channels for logo inclusion</inlineHelpText>
    <label>Co-branding Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMM</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print/offline</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>