force-app/main/default/objects/Contract__c/fields/Co_branding_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Co_branding_Preferences__c</fullName>
    <description>Client preferences on logo inclusion</description>
    <inlineHelpText>Client preferences on logo inclusion</inlineHelpText>
    <label>Co-branding Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>