force-app/main/default/objects/Contract__c/fields/CO_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>CO_Name_Number__c</fullName>
    <formula>Name + &quot; (&quot; + ContractNumber__c + &quot;)&quot;</formula>
    <label>CO Name + Number</label>
    <type>Text</type>
</CustomField>