force-app/main/default/objects/Contract__c/fields/Coaching_interaction_threshold_days__c.field-meta.xml
<CustomField>
    <fullName>Coaching_interaction_threshold_days__c</fullName>
    <label>Coaching interaction threshold (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>