force-app/main/default/objects/Contract__c/fields/Coaching_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Sessions__c</fullName>
    <inlineHelpText>Number of live 1 on 1 coaching sessions required within the time horizon. Ongoing requirement for coverage. Flows to redshift.</inlineHelpText>
    <label>Coaching Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>