force-app/main/default/objects/Contract__c/fields/Communication_Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Language_Preference__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Communication Language Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English Only</fullName>
            </value>
            <value>
                <fullName>Bilingual Communications (Spanish)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>