force-app/main/default/objects/Contract__c/fields/CompanySigned__c.field-meta.xml
<CustomField>
    <fullName>CompanySigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CompanySignedId</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CompanySigned_Contracts</relationshipLabel>
    <relationshipName>LGVO_CompanySigned_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>