force-app/main/default/objects/Contract__c/fields/CompanySignedDate__c.field-meta.xml
<CustomField>
    <fullName>CompanySignedDate__c</fullName>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>CompanySignedDate</label>
    <type>Date</type>
</CustomField>