force-app/main/default/objects/Contract__c/fields/Complete_Per_Legal__c.field-meta.xml
<CustomField>
    <fullName>Complete_Per_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Per Legal</label>
    <type>Checkbox</type>
</CustomField>