force-app/main/default/objects/Contract__c/fields/Confirm_On_No_Recruitable_Match__c.field-meta.xml
<CustomField>
    <fullName>Confirm_On_No_Recruitable_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A flag to confirm or not when there&apos;s no recruitable match</inlineHelpText>
    <label>Confirm On No Recruitable Match</label>
    <type>Checkbox</type>
</CustomField>