force-app/main/default/objects/Contract__c/fields/Consecutive_Inactive_Months_to_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Inactive_Months_to_Lapsed__c</fullName>
    <description>Integrated with NetSuite and Redshift</description>
    <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
    <label>Consecutive Inactive Months to Lapsed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>4.5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>