force-app/main/default/objects/Contract__c/fields/Contract_Data_Certified_by__c.field-meta.xml
<CustomField>
    <fullName>Contract_Data_Certified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Data Certified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGO_Contracts_CertifiedBy</relationshipName>
    <type>Lookup</type>
</CustomField>