force-app/main/default/objects/Contract__c/fields/Contract_Data_Entry_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Data_Entry_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Data Entry Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGO_Contracts_DataEntrt_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>