force-app/main/default/objects/Contract__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <description>Date the Client Overview becomes effective.</description>
    <inlineHelpText>Integrated with NetSuite</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>