force-app/main/default/objects/Contract__c/fields/Contract_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Contract_Hyperlink__c</fullName>
    <description>Can only be used in Production</description>
    <formula>&quot;https://livongohealth2ndorg.lightning.force.com/&quot;&amp;  Contract_ID_Long__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Can only be used in Production</inlineHelpText>
    <label>Contract Hyperlink</label>
    <type>Text</type>
</CustomField>