force-app/main/default/objects/Contract__c/fields/Contract_ID_Long__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_Long__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract ID Long</label>
    <type>Text</type>
</CustomField>