force-app/main/default/objects/Contract__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>Holds contract name value</description>
    <label>Contract Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>