force-app/main/default/objects/Contract__c/fields/Contract_Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://livongohealth2ndorg.lightning.force.com/&quot; + Id , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name (Hyperlink)</label>
    <type>Text</type>
</CustomField>