force-app/main/default/objects/Contract__c/fields/Contract_Number_HyperLink__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_HyperLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, ContractNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>