force-app/main/default/objects/Contract__c/fields/Contract_Path__c.field-meta.xml
<CustomField>
    <fullName>Contract_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Contract Path</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Contracts (Contract Path)</relationshipLabel>
    <relationshipName>LVGO_Contracts_ContractPath</relationshipName>
    <type>Lookup</type>
</CustomField>