force-app/main/default/objects/Contract__c/fields/Contract_Path_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Path_Deprecated__c</fullName>
    <description>Place for the Contract Path relationship to be captured for each contract.</description>
    <label>Contract Path [Deprecated]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>