force-app/main/default/objects/Contract__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <type>TextArea</type>
</CustomField>