force-app/main/default/objects/Contract__c/fields/Contract_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Date__c</fullName>
    <description>The date a contract is terminated with a client (or has expired and not been renewed)</description>
    <inlineHelpText>Integrated with NetSuite</inlineHelpText>
    <label>Contract Termination Date</label>
    <type>Date</type>
</CustomField>