force-app/main/default/objects/Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Program Agreement</fullName>
            </value>
            <value>
                <fullName>Third Party Agreement</fullName>
            </value>
            <value>
                <fullName>Client Confirmation Schedule</fullName>
            </value>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>