force-app/main/default/objects/Contract__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Contract Number</label>
    <type>AutoNumber</type>
</CustomField>