force-app/main/default/objects/Contract__c/fields/ContractRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewalDate__c</fullName>
    <description>Date the Client must indicate whether they intend to renew</description>
    <inlineHelpText>Date the Client must indicate whether they intend to renew</inlineHelpText>
    <label>Program Renewal Notice Date</label>
    <type>Date</type>
</CustomField>