force-app/main/default/objects/Contract__c/fields/Contractual_Reporting_Required__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Reporting_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractual Reporting Required?</label>
    <type>Checkbox</type>
</CustomField>