force-app/main/default/objects/Contract__c/fields/CountOfCMCA__c.field-meta.xml
<CustomField>
    <fullName>CountOfCMCA__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup Helper of all CMC Associations on Program Overview</description>
    <label>CountOfCMCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>