force-app/main/default/objects/Contract__c/fields/Cross_sell_Recruitment_Began_Date__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell_Recruitment_Began_Date__c</fullName>
    <label>Cross-sell Recruitment Began Date</label>
    <type>Date</type>
</CustomField>