force-app/main/default/objects/Contract__c/fields/CS_Action_Required_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>CS_Action_Required_for_Renewal__c</fullName>
    <description>Indicates how Client Success should engage with clients to renew contracts that are through this partnership</description>
    <inlineHelpText>Indicates how Client Success should engage with clients to renew contracts that are through this partnership</inlineHelpText>
    <label>CS Action Required for Renewal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>