force-app/main/default/objects/Contract__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Client Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGO_Client_Overviews1</relationshipName>
    <type>Lookup</type>
</CustomField>