force-app/main/default/objects/Contract__c/fields/Cumulative_Program_Cap__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Program_Cap__c</fullName>
    <inlineHelpText>Maximum cumulative number of members enrolled for this program over time</inlineHelpText>
    <label>Cumulative Program Cap</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>