force-app/main/default/objects/Contract__c/fields/Custom_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Custom_Campaign__c</fullName>
    <description>What type of custom campaign does the client require? Added new values</description>
    <inlineHelpText>What type of custom campaign does the client require?</inlineHelpText>
    <label>Campaign Options</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2021 OEP</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Partnership SPA</fullName>
            </value>
            <value>
                <fullName>Reduced OEP</fullName>
            </value>
            <value>
                <fullName>2021 OEP Reduced</fullName>
            </value>
            <value>
                <fullName>Optimized Enrollment Plan</fullName>
            </value>
            <value>
                <fullName>OEP Lite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>