force-app/main/default/objects/Contract__c/fields/Custom_Claims_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Custom_Claims_Configuration__c</fullName>
    <inlineHelpText>Enter the custom claim config separated by semicolon with no space (&apos;null&apos; if not applicable): Device;Procedure Code;Place Of Service;Procedure Modifier</inlineHelpText>
    <label>Custom Claims Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>