force-app/main/default/objects/Contract__c/fields/CustomerSigned__c.field-meta.xml
<CustomField>
    <fullName>CustomerSigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomerSignedId</label>
    <referenceTo>Contact__c</referenceTo>
    <relationshipLabel>CustomerSigned_Contracts</relationshipLabel>
    <relationshipName>LGVO_CustomerSigned_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>