force-app/main/default/objects/Contract__c/fields/CustomerSignedDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignedDate__c</fullName>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>CustomerSignedDate</label>
    <type>Date</type>
</CustomField>