force-app/main/default/objects/Contract__c/fields/CustomPGType__c.field-meta.xml
<CustomField>
    <fullName>CustomPGType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Performance Guarantee Type: Custom</description>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Custom PG Type</label>
    <type>Checkbox</type>
</CustomField>