force-app/main/default/objects/Contract__c/fields/CVS_TDC_Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CVS_TDC_Eligibility_Criteria__c</fullName>
    <label>CVS/TDC Eligibility Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active Coverage</fullName>
            </value>
            <value>
                <fullName>Medical Claims</fullName>
            </value>
            <value>
                <fullName>Rx Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>