force-app/main/default/objects/Contract__c/fields/Data_Privacy_and_Security_Reqs_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_and_Security_Reqs_In_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents the security exhibit that is part of the contract</description>
    <inlineHelpText>Represents the security exhibit that is part of the contract</inlineHelpText>
    <label>Data Privacy and Security Reqs In Place?</label>
    <type>Checkbox</type>
</CustomField>