force-app/main/default/objects/Contract__c/fields/Data_Reconciliation_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Data_Reconciliation_Action_Items__c</fullName>
    <label>Data Reconciliation Action Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIM to correct or confirm Covered Lives/RPwD estimates</fullName>
            </value>
            <value>
                <fullName>CIM to get additional email data</fullName>
            </value>
            <value>
                <fullName>CIM to get additional medical claims data</fullName>
            </value>
            <value>
                <fullName>CIM to verify we have data from all health systems</fullName>
            </value>
            <value>
                <fullName>Sales to correct or confirm Covered Lives/RPwD estimates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>