force-app/main/default/objects/Contract__c/fields/Data_Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Reconciliation_Status__c</fullName>
    <label>Data Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved - Client had Large Employee Event</fullName>
            </value>
            <value>
                <fullName>Resolved - Contract-Related Restrictions</fullName>
            </value>
            <value>
                <fullName>Resolved - Corrected</fullName>
            </value>
            <value>
                <fullName>Resolved - Pilot Population</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>